# mylocalmasjid_api

./: .gitignore  Makefile  README.md  alembic.ini  generate_openapi.py  openapi.json  pyproject.toml  versions
.github/workflows/: deploy-lambda.yml  deploy-production.yml  deploy-staging.yml  deploy.yml
api/: app.py  database.py
api/auth/: __init__.py  authenticate.py  models.py  utils.py  views.py
api/migrations/: env.py
api/migrations/versions/: 1daafaa6ee48_remove_deprecated_masjid_id_fields.py  99998eb2198d_added_bool_check_for_times.py  a1598e5dfbf9_remove_all_masjid_id_fields.py  c7c81cf8572f_migrated_id_fields.py
api/public/: __init__.py
api/public/announcement/: crud.py  views.py
api/public/config/: crud.py  views.py
api/public/facility/: crud.py  models.py  views.py
api/public/location/: crud.py  views.py
api/public/masjid/: crud.py  views.py
api/public/prayer_times/: crud.py  models.py  views.py
api/public/special_prayer/: crud.py  views.py
api/utils/: helpers.py
mylocalmasjid_api/: app.py  config.py  database.py
mylocalmasjid_api/auth/: __init__.py  authenticate.py  models.py  utils.py  views.py
mylocalmasjid_api/migrations/: env.py
mylocalmasjid_api/migrations/versions/: 0cba8268bf04_added_config_table.py  1f9d0557e847_cleaned_up_optional_fields.py  261d97d4709b_re_added_nullable_fields.py  2d7928204db6_added_in_enum_for_user_role.py  317d43795cea_reset_db_keys.py  (+12 more)
mylocalmasjid_api/public/: __init__.py
mylocalmasjid_api/utils/: helpers.py  hijri_date.py  logger.py  prayer_calculator.py
reports/: licenses.md
(+24 files in other folders)
